3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugin/plugin_python.c, plugin_animator/plugin_animator.c: Handle all defined
   events.
Andreas Kirschbaum 2005-01-10

server/spell_attack.c: apply patch #1096921 courtesy Salathar.
   Charmed monsters now lose the 'generator' flag, to prevent
   things like mice outbreak in bigworld maps.
Ryo 2005-01-07

plugin/plugin_pyhton.c, plugin/include/plugin_python.h: Remove obsolete
   functions: SetGender, SetRank, SetAlignment, SetGuildForce, GetGuildForce,
   CreatePlayerForce, CreatePlayerInfo, GetPlayerInfo, GetNextPlayerInfo,
   SetPreviousObject, SetNextObject.
plugin/plugin_python.c, plugin/include/plugin_python.h: Add missing attack type
   wrapper functions, function CFPython.SetDamned(), wrapper functions for
   missing cost flags, and wrapper functions for event types.
plugin/plugin_python.c: Add an optional parameter to CFPython.SetName() to
   specify name_pl as well. Always set name_pl.
plugin/plugin_python.c: Fix a buffer overflow in CFPython.RegisterCommand():
   allocated memory was not sufficient to hold the trailing '\0'.
plugin/plugin_python.c: Use #define constants.
plugin/include/plugin_python.h, plugin/plugin_python.c,
plugin_animator/plugin_animator.c, server/plugins.c: General cleanup - merge
   duplicate code, remove debugging code, rename variables, rename C function
   names to match the Python function name, use hook functions where
   appropriate.
include/sproto.h, plugin/plugin_python.c, server/plugins.c, server/shop.c:
   Use uint64 type for variables holding money. Use Python long integers to
   pass these variables to/from the Python plugin.
Andreas Kirschbaum 2005-01-07
